package pl.zzpj.subscription_service.domain.subscription;

public enum PlanCode {
  FREE,
  STANDARD,
  PRO
}
