package pl.zzpj.subscription_service.domain.token.reservation;

public enum TokenReservationStatus {
    RESERVED,
    CONSUMED,
    RELEASED
}
